| Bug #20077 | Cluster to only support partition by key, needs to error on others | ||
|---|---|---|---|
| Submitted: | 25 May 2006 20:43 | Modified: | 5 Jul 2006 11:01 |
| Reporter: | Jonathan Miller | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1.12 | OS: | Linux (Linux 32 Bit OS) |
| Assigned to: | Tomas Ulin | CPU Architecture: | Any |
[25 May 2006 20:43]
Jonathan Miller
[14 Jun 2006 10:14]
Tomas Ulin
patch is in to prevent creation of tables with the unsupported partition types, just need to remove ifdef in ha_ndbcluster.cc
[4 Jul 2006 14:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8701
[4 Jul 2006 14:40]
Tomas Ulin
ndb partition by hash, range,list disabled from 5.1.12
[4 Jul 2006 21:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8720
[4 Jul 2006 22:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8721
[4 Jul 2006 23:13]
Tomas Ulin
pushed to 5.1.12
[5 Jul 2006 11:01]
Jon Stephens
Documented in 5.1.12 changelog, 5.1 Cluster and Partitioning chapters. Closed.
