Bug #20077 Cluster to only support partition by key, needs to error on others